--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,35 +1,52 @@
 <nav [ngClass]="navbarClass" class="navbar navbar-expand-lg">
   <a class="navbar-brand d-flex align-items-center" routerLink="/">
-    <img src="assets/favicon-96x96.png" alt="Beyond Rule 4 Logo" width="40" height="40" class="me-2">
-    <span class="fw-bold" style="font-style: italic;">Beyond</span>&nbsp;Rule 4
+    <img
+      src="assets/favicon-96x96.png"
+      alt="Beyond Rule 4 Logo"
+      width="40"
+      height="40"
+      class="me-2"
+    />
+    <span class="fw-bold" style="font-style: italic">Beyond</span>&nbsp;Rule 4
   </a>
-  <button class="navbar-toggler" type="button" (click)="isOpen = !isOpen" data-toggle="collapse"
-    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-    aria-label="Toggle navigation">
+  <button
+    class="navbar-toggler"
+    type="button"
+    (click)="isOpen = !isOpen"
+    data-toggle="collapse"
+    data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="navbar-collapse" [ngClass]="{collapse: !isOpen}" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/beyond">Beyond</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/forecasting">FI Forecasting</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav justify-content-end">
-      <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/about">About</a>
-      </li>
-    </ul>
+  <div
+    class="navbar-collapse"
+    [ngClass]="{ collapse: !isOpen }"
+    id="navbarSupportedContent"
+  >
     <form class="form-inline ms-2 my-2 my-lg-0">
-      <button *ngIf="!isAuthorized" [ngClass]="buttonClass" class="btn my-2 my-sm-0" (click)="authorize()" type="button">
+      <button
+        *ngIf="!isAuthorized"
+        [ngClass]="buttonClass"
+        class="btn my-2 my-sm-0"
+        (click)="authorize()"
+        type="button"
+      >
         <fa-icon [icon]="['fas', 'key']"></fa-icon>
         Authorize with YNAB
       </button>
-      <button *ngIf="isAuthorized" [ngClass]="buttonClass" class="btn my-2 my-sm-0" (click)="logOut()" type="button">Log
-        Out</button>
+      <button
+        *ngIf="isAuthorized"
+        [ngClass]="buttonClass"
+        class="btn my-2 my-sm-0"
+        (click)="logOut()"
+        type="button"
+      >
+        Log Out
+      </button>
     </form>
   </div>
 </nav>
