remove redundant section

--- a/src/app/forecasting/output/milestones/milestones.component.html
+++ b/src/app/forecasting/output/milestones/milestones.component.html
@@ -5,7 +5,7 @@
 
 <div class="row">
   <app-milestones-chart class="milestones-chart col-sm" [forecast]="forecast" [milestones]="milestones"
-    [currencyIsoCode]="calculateInput?.currencyIsoCode">
+    [currencyIsoCode]="calculateInput?.currencyIsoCode" [calculateInput]="calculateInput">
   </app-milestones-chart>
 </div>
 
