--- a/src/app/forecasting/output/output.component.html
+++ b/src/app/forecasting/output/output.component.html
@@ -1,28 +1,38 @@
-<div class="row" *ngIf="calculateInput else loading">
+<div class="row" *ngIf="calculateInput; else loading">
   <div class="col">
     <!-- FIRE Dashboard -->
     <div class="row">
-      <app-fire-dashboard class="col" [calculateInput]="calculateInput" [forecast]="forecast">
+      <app-fire-dashboard
+        class="col"
+        [calculateInput]="calculateInput"
+        [forecast]="forecast"
+      >
       </app-fire-dashboard>
     </div>
-    
-    <!-- Projection Chart -->
-    <div class="row mt-4">
-      <app-projection-chart class="col" [calculateInput]="calculateInput" [forecast]="forecast">
-      </app-projection-chart>
-    </div>
-    
+
     <!-- Existing Components -->
     <div class="row mt-4">
-      <app-fi-text class="col" [calculateInput]="calculateInput" [forecast]="forecast">
+      <app-fi-text
+        class="col"
+        [calculateInput]="calculateInput"
+        [forecast]="forecast"
+      >
       </app-fi-text>
     </div>
     <div class="row">
-      <app-milestones class="col" [calculateInput]="calculateInput" [forecast]="forecast">
+      <app-milestones
+        class="col"
+        [calculateInput]="calculateInput"
+        [forecast]="forecast"
+      >
       </app-milestones>
     </div>
     <div class="row mt-4">
-      <app-expense-impact class="col" [calculateInput]="calculateInput" [forecast]="forecast">
+      <app-expense-impact
+        class="col"
+        [calculateInput]="calculateInput"
+        [forecast]="forecast"
+      >
       </app-expense-impact>
     </div>
   </div>
@@ -34,6 +44,5 @@
       <fa-icon [icon]="['fas', 'sync']" [animation]="'spin'"></fa-icon>
       Getting Budget from YNAB...
     </h4>
-
   </div>
 </ng-template>
