--- a/src/app/forecasting/input/ynab/ynab.component.css
+++ b/src/app/forecasting/input/ynab/ynab.component.css
@@ -26,3 +26,9 @@
 table.expenses {
   font-size: 0.8rem;
 }
+
+.brand-secondary-alert {
+  background-color: var(--bs-brand-200);
+  border-color: var(--bs-brand-400);
+  color: var(--bs-brand-800);
+}
