--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav [ngClass]="navbarClass" class="navbar navbar-expand-lg">
+<nav [ngClass]="navbarClass" class="navbar navbar-expand-lg bg-brand-900">
   <a class="navbar-brand d-flex align-items-center" routerLink="/">
     <img
       src="assets/favicon-96x96.png"
@@ -27,7 +27,7 @@
     [ngClass]="{ collapse: !isOpen }"
     id="navbarSupportedContent"
   >
-    <form class="form-inline ms-2 my-2 my-lg-0">
+    <form class="form-inline ms-auto my-2 my-lg-0">
       <button
         *ngIf="!isAuthorized"
         [ngClass]="buttonClass"
