expand privacy policy on clicking link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,12 @@
               aria-controls="privacy-content"
             >
               Privacy Policy
-              <i class="fas" [class.fa-chevron-down]="isPrivacyCollapsed" [class.fa-chevron-up]="!isPrivacyCollapsed" [class.float-end]="true"></i>
+              <i
+                class="fas"
+                [class.fa-chevron-down]="isPrivacyCollapsed"
+                [class.fa-chevron-up]="!isPrivacyCollapsed"
+                [class.float-end]="true"
+              ></i>
             </button>
           </h4>
         </div>
@@ -27,9 +32,11 @@
             <h5>About</h5>
             <p>
               This application is an open source side-project of a software
-              developer chasing financial freedom. It was created with the
-              intent of providing personal motivation to become financially
-              independent.
+              developer chasing financial freedom. It is a minor modification on
+              a fork of
+              <a href="https://beyondrule4.jmmorrissey.com">Beyond Rule 4</a>
+              and was created to provide motivation and clarity on a path to
+              financially independence.
             </p>
 
             <p>
@@ -51,7 +58,7 @@
               <a href="https://app.ynab.com/settings" target="_blank"
                 >https://app.ynab.com/settings</a
               >, scroll to "Authorized Applications", and click "Revoke" for
-              Beyond Rule 4. Thanks for trying it out!
+              YFI. Thanks for trying it out!
             </p>
 
             <p>
@@ -178,7 +185,7 @@
             </ul>
 
             <h6>Use of Data</h6>
-            <p>Beyond Rule 4 uses the collected data for various purposes:</p>
+            <p>YFI uses the collected data for various purposes:</p>
             <ul>
               <li>To provide and maintain the Service</li>
               <li>
@@ -209,25 +216,23 @@
             </p>
 
             <p>
-              Beyond Rule 4 will take all steps reasonably necessary to ensure
-              that your data is treated securely and in accordance with this
-              Privacy Policy and no transfer of your Personal Data will take
-              place to an organization or a country unless there are adequate
-              controls in place including the security of your data and other
-              personal information.
+              YFI will take all steps reasonably necessary to ensure that your
+              data is treated securely and in accordance with this Privacy
+              Policy and no transfer of your Personal Data will take place to an
+              organization or a country unless there are adequate controls in
+              place including the security of your data and other personal
+              information.
             </p>
 
             <h6>Disclosure Of Data</h6>
             <p><strong>Legal Requirements</strong></p>
             <p>
-              Beyond Rule 4 may disclose your Personal Data in the good faith
-              belief that such action is necessary to:
+              YFI may disclose your Personal Data in the good faith belief that
+              such action is necessary to:
             </p>
             <ul>
               <li>To comply with a legal obligation</li>
-              <li>
-                To protect and defend the rights or property of Beyond Rule 4
-              </li>
+              <li>To protect and defend the rights or property of YFI</li>
               <li>
                 To prevent or investigate possible wrongdoing in connection with
                 the Service
