--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -29,7 +29,7 @@
   >
     <ul class="navbar-nav me-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#privacy-policy">Privacy Policy</a>
+        <a class="nav-link" href="#privacy-policy" (click)="onPrivacyPolicyClick()">Privacy Policy</a>
       </li>
     </ul>
     <form class="form-inline ms-auto my-2 my-lg-0">
